# tuned-lens

./: .codecov.yml  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pre-commit.yml  pre-merge.yml  pre-release.yaml  pre-release.yml  publish.yml  tag-pushed.yml
docs/: .gitignore  conf.py  index.rst
docs/_templates/autosummary/: module.rst
docs/source/: conf.py  index.rst
docs/source/tutorials/: combining_with_transformer_lens.ipynb  loading_pretrained_lenses.rst  maintainers_guide.rst  prediction_trajectories.ipynb  training_and_evaluating_lenses.rst
docs/tutorials/: loading_pretrained_lenses.rst  training_and_evaluating_lenses.rst
logit_lens/: __init__.py  data.py  feature_extraction.py  model_surgery.py  plotting.py  residual_stream.py  tuned_lens.py
logit_lens/nn/: __init__.py  layer_scale.py  low_rank_linear.py
logit_lens/scripts/: eval_lens.py  tune_lens.py
notebooks/: across-time.ipynb  anomaly_detection.ipynb  basics.ipynb  compare_models.ipynb  downstream.ipynb  eigenplots.ipynb  fisher_noising.ipynb  grad_alignment.ipynb  injection.ipynb  interactive.ipynb  interative.ipynb  intervention.ipynb  layer_ablation.ipynb  prediction_trajectories.ipynb
notebooks/icml2023/: contamination.ipynb  figures.ipynb  residual-stats.ipynb  scaling-laws.ipynb  static-analysis.ipynb  transfer.ipynb
tests/: conftest.py  test_data.py  test_datasets.py  test_decoder.py  test_distance.py  test_feature_extraction.py  test_incremental_pca.py  test_lenses.py  test_load_artifact.py  test_model_surgery.py  test_plotting.py  test_residual_stats.py  test_stats.py  test_subspaces.py  test_tuned_lens.py  test_unembed.py  test_utils.py
tests/nn/: test_norms.py
tests/plotting/: test_prediction_trajectory.py  test_token_formatter.py  test_trajectory_plotting.py
tests/scripts/: test_integration.py
tests/test_data/: pile_text.jsonl
tuned_lens/: __init__.py  __main__.py  data.py  load_artifacts.py  model_surgery.py  residual_stream.py  utils.py
tuned_lens/causal/: __init__.py  ablation.py  intervention.py  subspaces.py  utils.py
tuned_lens/datasets/pile_sliver/: pile_sliver.py
tuned_lens/nn/: __init__.py  decoder.py  downstream_wrapper.py  lenses.py  norms.py  probe_dict.py  tuned_lens_hf.py  unembed.py
tuned_lens/plotting/: __init__.py  interventions.py  lens.py  logit_lens.py  plot_attn.py  plot_lens.py  prediction_trajectory.py  text_utils.py  token_formatter.py  trajectory_plotting.py
tuned_lens/scripts/: __init__.py  argparsers.py  cbe.py  downstream.py  eval_loop.py  ingredients.py  lens.py  train_loop.py
tuned_lens/stats/: __init__.py  anomaly.py  distance.py  logit_stats.py  rank.py  residual_stats.py
white_box/: __init__.py  __main__.py  data.py  intervention.py  model_surgery.py  plotting.py  residual_stats.py  residual_stream.py  utils.py
white_box/causal/: __init__.py  ablation.py  intervention.py  subspaces.py  utils.py
white_box/math/: __init__.py  geometry.py  incremental_pca.py  wasserstein.py
white_box/nn/: __init__.py  _model_specific.py  back_translator.py  decoder.py  low_rank_linear.py  model_wrapper.py  multi_device_wrapper.py  probe_dict.py  tuned_lens.py  tuned_lens_wrapper.py
white_box/plotting/: __init__.py  logit_lens.py
white_box/scripts/: __init__.py  argparsers.py  downstream.py  eval_bases.py  eval_lens.py  eval_loop.py  extract_bases.py  lens.py  train_loop.py  tune_lens.py
white_box/stats/: __init__.py  calibration.py  dimensionality.py  distance.py  logit_stats.py  rank.py  residual_stats.py
