[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tuned-lens"
description = "Tools for understanding how transformer predictions are built layer-by-layer"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["nlp", "interpretability", "language-models", "explainable-ai"]
license = {text = "MIT License"}
dependencies = [
    "accelerate",
    "datasets",
    "plotly>=5.13.1",
    "scikit-learn",
    "zstandard",
    # Needed for Fully Sharded Data Parallel
    "torch>=1.12.0",
    "transformers",
    "huggingface_hub>=0.12.1",
]
version = "0.0.3"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "bump2version",
    "pytest-skip-slow",
    "pytest",
]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
]
test = [
    "pytest-skip-slow",
    "pytest-cov",
    "pytest",
    "mock",
]
notebooks = [
    "ipywidgets",
]

[project.scripts]
tuned-lens = "tuned_lens.__main__:run"

[tool.setuptools.packages.find]
namespaces = false

[tool.pytest.ini_options]
addini = "slow : mark tests as slow these will be skipped by default"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "D"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"docs/**.py" = ["D"]
"tests/**.py" = ["D"]
"tuned_lens/stats/**.py" = ["D"]
"tuned_lens/causal/**.py" = ["D"]
"tuned_lens/nn/probe_dict.py" = ["D"]
